plugins {
    id "dev.architectury.loom-no-remap" version "1.14-SNAPSHOT" apply false
    id "architectury-plugin" version "3.5-SNAPSHOT"
    id "com.github.johnrengelman.shadow" version "8.1.1" apply false

    id "java"
    id "maven-publish"
}

// ---------------------------------------------------------------------------
// Version suffix derived from CI build metadata.
// ---------------------------------------------------------------------------
ext {
    getVersionSuffix = {
        String versionSuffix = ""
        if (System.getenv("BUILD_TAG") != null && !System.getenv("BUILD_TAG").isEmpty() && System.getenv("BUILD_RELEASE") != "true") {
            versionSplit = System.getenv("BUILD_TAG").split("\\+")
            versionPart = (versionSplit.length >= 2) ? versionSplit[1] : ""
            if ((versionPart || !versionPart.isEmpty()) && versionPart.startsWith("alpha") || versionPart.startsWith("beta")) {
                versionSuffix += "+" + versionPart
            }
            return versionSuffix
        }
        if (System.getenv("BUILD_RELEASE") != "true") {
            String buildNumber = System.getenv("BUILD_ID")
            versionSuffix += buildNumber != null ? ("+build." + buildNumber) : "+snapshot"
        }
        return versionSuffix
    }
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

jar {
    archiveClassifier = "raw"
}

// ---------------------------------------------------------------------------
// Shared configuration for every platform / common subproject.
// ---------------------------------------------------------------------------
subprojects {
    apply plugin: "dev.architectury.loom-no-remap"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    // -- Coordinates ----------------------------------------------------------
    version = project.mod_version + project.getVersionSuffix()
    group = project.maven_group
    base.archivesName = project.archives_name +
        "-mc" + project.minecraft_version +
        "-" + project.name.replace("${mod_id}-", "")

    // -- Repositories ---------------------------------------------------------
    repositories {
        mavenLocal()
        maven {
            name "CjsahMaven"
            url "https://server.cjsah.net:1002/maven/"
        }
    }

    // -- Shared dependencies --------------------------------------------------
    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"

        // Incremental storage
        implementation("io.github.skydynamic:incremental-storage-lib:$rootProject.incremental_storage_lib_version")
        implementation("org.jetbrains.exposed:exposed-core:0.57.0")
        implementation("org.jetbrains.exposed:exposed-jdbc:0.57.0")
        implementation("com.h2database:h2:2.2.224")

        // Scheduler — https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
        implementation("org.quartz-scheduler:quartz:2.5.0")

        // Lombok
        compileOnly("org.projectlombok:lombok:1.18.46")
        annotationProcessor("org.projectlombok:lombok:1.18.46")
    }

    // -- Java toolchain -------------------------------------------------------
    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
    }

    // -- Access widener: merge common + platform before compiling -------------
    apply from: rootProject.file("gradle/accesswidener.gradle")

    // -- build/libs housekeeping ----------------------------------------------
    apply from: rootProject.file("gradle/libs-output.gradle")
}
